# HGB

./: .git_status.txt  .gitignore  PRD.txt  README.md  pyproject.toml
docs/: adventure_studio_implementation_note.md  v2_scope.md
examples/mini_adventure/: game.json
examples/mini_adventure/scenes/: clubhouse.json  garage.json  scene_1.json  town_square.json
src/pce/: __init__.py
src/pce/editor/: __init__.py  app.py  canvas.py  canvas_rendering.py  main.py  preview_bridge.py  project_controller.py  state.py
src/pce/editor/panels/: __init__.py  action_list_panel.py  adventure_shell.py  asset_browser.py  dialogue_panel.py  dialogue_studio.py  project_panel.py  properties_panel.py  reaction_recipes.py  scene_panel.py  story_studio.py  theme.py  validation_panel.py  visual_editors.py
src/pce/editor/tools/: __init__.py  exit_tool.py  hotspot_tool.py  npc_tool.py  path_tool.py  select_tool.py
src/pce/runtime/: __init__.py  actions.py  app.py  debug_overlay.py  dialogue.py  engine.py  hotspot.py  input.py  main.py  movement.py  player.py  renderer.py  scene_manager.py  scene_runtime.py  state.py
src/pce/shared/: __init__.py  asset_paths.py  constants.py  models.py  schema.py  serialization.py  validation.py
tests/: conftest.py  test_action_execution.py  test_editor_controller.py  test_project_loading.py  test_reaction_recipes.py  test_runtime_state.py  test_scene_loading.py  test_validation.py
